--- a/bower.json
+++ b/bower.json
@@ -7,19 +7,25 @@
     "jquery": "~1.11.0",
     "bootstrap-sass": "~2.3.1",
     "es5-shim": "~2.1.0",
-    "angular-resource": "~1.2.5",
-    "angular-cookies": "~1.2.5",
-    "angular-sanitize": "~1.2.5",
+    "angular-resource": "~1.3.0",
+    "angular-cookies": "~1.3.0",
+    "angular-sanitize": "~1.3.0",
     "angular-bootstrap": "~0.6.0",
-    "angular-ui-router": "~0.2.7",
+    "angular-ui-router": "~0.2.10",
+    "angular-messages": "~1.3.0",
+    "bootstrap": "~2.3.2",
     "BootstrapFormHelpers": "boydjd/BootstrapFormHelpers#1.9.2",
     "angular-uuid4": "~0.0.3",
     "font-awesome": "~4.0.3",
     "angular-xeditable": "~0.1.8",
-    "bxslider-4-kallisto": "~4.1.2"
+    "bxslider-4-kallisto": "~4.1.2",
+    "ng-idle": "~0.3.2"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.5",
-    "angular-scenario": "~1.2.5"
+    "angular-mocks": "~1.3.0",
+    "angular-scenario": "~1.3.0"
+  },
+  "resolutions": {
+    "angular": "1.3.0-beta.11"
   }
 }
